--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -48,7 +48,7 @@
 
     <!--begin::Form group-->
     <div class="form-group">
-      <label class="font-size-h6 font-weight-bolder text-dark">username</label>
+      <label class="font-size-h6 font-weight-bolder text-dark">Usuario</label>
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg"
         name="username"
