--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.scss
@@ -13,3 +13,13 @@
 .sub-menu{
   background-color:#319dd7;
 }
+.spinner_overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(14, 14, 14, 0.534);
+  opacity: 0.8;
+  z-index: 1000;
+}
