--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -543,6 +543,9 @@
 
 </form>
 
+<div id="overlay" data-loading>
+  <i class="icon-spinner icon-do-spin" ></i>
+</div>
 
 <div class="example-preview">
   <span *ngIf="closeResult">
