--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/huesped/huesped-component/huesped-component.component.html
@@ -1,59 +1,43 @@
 <form
-(submit)="save()"
 [formGroup]="formGroup"
 class="form form-label-right"
 >
 <div
-  style="background-color: rgba(243, 243, 243, 0.973)"
+  
   class="cursor-default modal-content"
 >
-  <div class="row">
-    <div style="margin-top: 5px" class="col-sm-3">
-      <label style="font-weight: bold"> &nbsp; ID Cliente : </label>
-      <label style="font-weight: bold; font-family: sans"
-        >&nbsp;{{ huesped.folio }}</label
-      >
+<div class="row container">
+
+  <div style="margin-top: 5px" class="col-sm-12">
+    <button [disabled]="!id_Socio" class="btn btn-secondary" [disabled]="id_Socio" (click)="getNumeroSocio()">GENERAR ID SOCIO</button>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <label style="font-weight: bold;font-size: medium; "> &nbsp; ID Socio : </label>
+    <label style="font-size: medium;" >&nbsp;{{id_Socio}}</label>
+
+    
+  </div>
+</div>
+<br>
+  <div class="row container">
+    <div style="margin-top: 5px" class="col-sm-4">
+      <mat-radio-button (change)="vipChecked()" [checked]="checkedVIP" class="example-margin">VIP</mat-radio-button >
     </div>
-    <div style="margin-top: 5px" class="col-sm-2">
-      <mat-checkbox class="example-margin">VIP</mat-checkbox>
+    <div style="margin-top: 5px" class="col-sm-4">
+      <mat-radio-button (change)="regularChecked()" [checked]="checkedRegular" class="example-margin">REGULAR</mat-radio-button >
     </div>
-    <div style="margin-top: 5px" class="col-sm-3">
-      <mat-checkbox class="example-margin">REGULAR</mat-checkbox>
-    </div>
-    <div style="margin-top: 5px" class="col-sm-3">
-      <mat-checkbox class="example-margin">LISTA NEGRA</mat-checkbox>
+    <div style="margin-top: 5px" class="col-sm-4">
+      <mat-radio-button (change)="listaNegraChecked()" [checked]="checkedListaNegra" class="example-margin">LISTA NEGRA</mat-radio-button >
     </div>
   </div>
-  <div class="form-group row">
-    <!-- <div class="form-group col-lg-12">
-      <label class="input-label">Buscar Húsped
-        <div class="input-group">
-          <select
-            class="form-control form-control-lg form-control-solid"
-            name="buscahuesped"
-            (change)="onSelectHuesped($event.target.value)"
-            #buscarHuesped>
-            <option disabled selected value> -- Buscar por Nombre -- </option>
-            <ng-container *ngFor="let huesped of customerService.items$ | async">
-              <option value="{{huesped.nombre}}">{{huesped.nombre}}
-              </option>
-            </ng-container>
-          </select>
-        </div>
-      </label>
-      <button class="btn btn-primary" type="button" disabled>
-        <i class="fa fa-search"></i>
-      </button>
-    </div> -->
-
+<br>
+  <div class="row container">
     <div class="col-lg-12">
-      <label class="form-label">Nombre</label>
+      <label class="form-label">Nombre Completo</label>
       <input
         [disabled]="modifica"
         type="text"
         class="form-control form-control-lg form-control-solid"
         name="nombre"
-        placeholder="Nombre completo"
         autocomplete="off"
         [class.is-invalid]="isControlInvalid('nombre')"
         [class.is-valid]="isControlValid('nombre')"
@@ -83,7 +67,8 @@ class="form form-label-right"
       </div>
     </div>
   </div>
-  <div class="row">
+  <br>
+  <div class="row container">
     <div class="col-lg-6">
       <label class="form-label">Email</label>
       <input
@@ -91,16 +76,12 @@ class="form form-label-right"
         type="email"
         class="form-control form-control-lg form-control-solid"
         name="email"
-        placeholder="Escribe tu Email"
         autocomplete="off"
         [class.is-invalid]="isControlInvalid('email')"
         [class.is-valid]="isControlValid('email')"
         formControlName="email"
         value="{{ huesped.email }}"
       />
-      <div class="valid-feedback" *ngIf="isControlValid('email')">
-        Email Escrito Correctamente
-      </div>
       <div
         class="invalid-feedback"
         *ngIf="controlHasError('minlength', 'email')"
@@ -113,12 +94,6 @@ class="form form-label-right"
       >
         Maximo 100 letras
       </div>
-      <div
-        class="invalid-feedback"
-        *ngIf="controlHasError('pattern', 'email')"
-      >
-        Escriba un correo valido
-      </div>
     </div>
 
     <div class="col-lg-6">
@@ -128,105 +103,56 @@ class="form form-label-right"
         type="tel"
         class="form-control form-control-lg form-control-solid"
         name="telefono"
-        placeholder="Teléfono"
         autocomplete="off"
         [class.is-invalid]="isControlInvalid('telefono')"
         [class.is-valid]="isControlValid('telefono')"
         formControlName="telefono"
         value="{{ huesped.telefono }}"
       />
-      <small>Formato: 000-0000-0000 </small>
       <br />
-      <div class="valid-feedback" *ngIf="isControlValid('telefono')">
-        Teléfono Escrito Correctamente
-      </div>
       <div
         class="invalid-feedback"
         *ngIf="controlHasError('minlength', 'telefono')"
       >
-        Minimo 12 numeros
+        Minimo 10 numeros
       </div>
       <div
         class="invalid-feedback"
         *ngIf="controlHasError('maxlength', 'telefono')"
       >
-        Maximo 14 numeros
+        Maximo 20 numeros
       </div>
     </div>
   </div>
 </div>
-<div style="background-color: #162f58">
-  <div
-    style="
-      border-radius: 5px;
-      background-color: #162f58;
-      display: flex;
-      justify-content: space-evenly;
-      flex-direction: row;
-    "
-    class="col-md-6 container"
-  >
-    <label style="color: aliceblue"> Otros Detalles </label>
-  </div>
-</div>
+  <div style="background-color: #319dd7" class="modal-content">
 
-<div class="row">
-  <!--HIDDEN-->
-  <div class="form-group hidden col-lg-12">
-    <div class="input-group">
-      <input
-        name="datepicker"
-        class="form-control"
-        ngbDatepicker
-        type="hidden"
-        #datepicker="ngbDatepicker"
-        [autoClose]="'outside'"
-        (dateSelect)="onDateSelection($event)"
-        [displayMonths]="2"
-        [dayTemplate]="t"
-        outsideDays="hidden"
-        [startDate]="fromDate!"
-        tabindex="-1"
-      />
-      <ng-template #t let-date let-focused="focused">
-        <span
-          class="custom-day"
-          [class.focused]="focused"
-          [class.range]="isRange(date)"
-          [class.faded]="isHovered(date) || isInside(date)"
-          (mouseenter)="hoveredDate = date"
-          (mouseleave)="hoveredDate = null"
-        >
-          {{ date.day }}
-        </span>
-      </ng-template>
-    </div>
+    <label
+      class="h4"
+      style="color: aliceblue; text-align: center; padding-top: 5px"
+    >  Otros Detalles </label>
   </div>
-  <!--HIDDEN-->
-  <div class="form-group col-lg-6">
-    <label class="form-label">Fecha de Nacimiento</label>
-    <div class="input-group">
-      <input
-        #dpFromDate
-        class="form-control"
-        placeholder="yyyy-mm-dd"
-        name="dpFromDate"
-        [value]="formatter.format(fromDate)"
-        (input)="fromDate = validateInput(fromDate, dpFromDate.value)"
-        formControlName="fechaNacimiento"
-        value="{{ huesped.fechaNacimiento }}"
-        [disabled]="modifica"
-      />
-      <div class="input-group-append">
-        <button
-          class="btn btn-outline-secondary calendar"
-          (click)="datepicker.toggle()"
-          type="button"
-        >
-          <i class="fa fa-calendar icon"></i>
-        </button>
+
+<div class="row container">
+  <div class="col-lg-6">
+      <div class="form-group">
+        <label class="form-label">Fecha de Nacimiento</label>
+        <div class="input-group">
+          <input formControlName="fechaNacimiento" class="form-control form-control-lg form-control-solid" placeholder="yyyy-mm-dd"
+                 name="dp" [(ngModel)]="model" ngbDatepicker [footerTemplate]="footerTemplate" #d="ngbDatepicker">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary " (click)="d.toggle()" type="button">
+              <i class="fa fa-calendar icon"></i>
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
+    <ng-template #footerTemplate>
+      <hr class="my-0">
+      <button class="btn btn-primary btn-sm m-2 float-left" (click)="model = today; d.close()">Today</button>
+      <button class="btn btn-secondary btn-sm m-2 float-right" (click)="d.close()">Close</button>
+    </ng-template>
+
   </div>
   <div class="col-lg-6">
     <br />
@@ -235,7 +161,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="trabajaEn"
-      placeholder="trabajaEn"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('trabajaEn')"
       [class.is-valid]="isControlValid('trabajaEn')"
@@ -248,17 +173,17 @@ class="form form-label-right"
       class="invalid-feedback"
       *ngIf="controlHasError('minlength', 'trabajaEn')"
     >
-      Minimo 3 numeros
+      Minimo 3 letras
     </div>
     <div
       class="invalid-feedback"
       *ngIf="controlHasError('maxlength', 'trabajaEn')"
     >
-      Maximo 100 numeros
+      Maximo 200 letras
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row container">
   <div class="col-lg-6">
     <br />
     <label class="form-label">Tipo de ID</label>
@@ -266,7 +191,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="tipoDeID"
-      placeholder="tipoDeID"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('tipoDeID')"
       [class.is-valid]="isControlValid('tipoDeID')"
@@ -295,7 +219,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="numeroDeID"
-      placeholder="numeroDeID"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('numeroDeID')"
       [class.is-valid]="isControlValid('numeroDeID')"
@@ -308,17 +231,17 @@ class="form form-label-right"
       class="invalid-feedback"
       *ngIf="controlHasError('minlength', 'numeroDeID')"
     >
-      Minimo 3 numeros
+      Minimo 3 caracteres
     </div>
     <div
       class="invalid-feedback"
       *ngIf="controlHasError('maxlength', 'numeroDeID')"
     >
-      Maximo 100 numeros
+      Maximo 100 caracteres
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row container">
   <div class="col-lg-12">
     <label class="form-label">Dirección</label>
     <input
@@ -326,7 +249,6 @@ class="form form-label-right"
       type="text"
       class="form-control form-control-lg form-control-solid"
       name="direccion"
-      placeholder="Direccion"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('direccion')"
       [class.is-valid]="isControlValid('direccion')"
@@ -348,7 +270,7 @@ class="form form-label-right"
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row container">
   <div class="col-lg-6">
     <br />
     <label class="form-label">País</label>
@@ -356,7 +278,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="pais"
-      placeholder="pais"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('pais')"
       [class.is-valid]="isControlValid('pais')"
@@ -369,13 +290,13 @@ class="form form-label-right"
       class="invalid-feedback"
       *ngIf="controlHasError('minlength', 'pais')"
     >
-      Minimo 3 numeros
+      Minimo 3 letras
     </div>
     <div
       class="invalid-feedback"
       *ngIf="controlHasError('maxlength', 'pais')"
     >
-      Maximo 100 numeros
+      Maximo 100 letras
     </div>
   </div>
   <div class="col-lg-6">
@@ -385,7 +306,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="ciudad"
-      placeholder="Ciudad"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('ciudad')"
       [class.is-valid]="isControlValid('ciudad')"
@@ -398,17 +318,17 @@ class="form form-label-right"
       class="invalid-feedback"
       *ngIf="controlHasError('minlength', 'ciudad')"
     >
-      Minimo 3 numeros
+      Minimo 3 caracteres
     </div>
     <div
       class="invalid-feedback"
       *ngIf="controlHasError('maxlength', 'ciudad')"
     >
-      Maximo 100 numeros
+      Maximo 100 caracteres
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row container">
   <div class="col-lg-6">
     <br />
     <label class="form-label">Codigo Postal</label>
@@ -416,7 +336,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="codigoPostal"
-      placeholder="codigoPostal"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('codigoPostal')"
       [class.is-valid]="isControlValid('codigoPostal')"
@@ -429,13 +348,13 @@ class="form form-label-right"
       class="invalid-feedback"
       *ngIf="controlHasError('minlength', 'codigoPostal')"
     >
-      Minimo 3 numeros
+      Minimo 3 caracteres
     </div>
     <div
       class="invalid-feedback"
       *ngIf="controlHasError('maxlength', 'codigoPostal')"
     >
-      Maximo 100 numeros
+      Maximo 20 caracteres
     </div>
   </div>
   <div class="col-lg-6">
@@ -445,7 +364,6 @@ class="form form-label-right"
       [disabled]="modifica"
       class="form-control form-control-lg form-control-solid"
       name="lenguaje"
-      placeholder="lenguaje"
       autocomplete="off"
       [class.is-invalid]="isControlInvalid('lenguaje')"
       [class.is-valid]="isControlValid('lenguaje')"
@@ -458,77 +376,32 @@ class="form form-label-right"
       class="invalid-feedback"
       *ngIf="controlHasError('minlength', 'lenguaje')"
     >
-      Minimo 3 numeros
+      Minimo 3 caracteres
     </div>
     <div
       class="invalid-feedback"
       *ngIf="controlHasError('maxlength', 'lenguaje')"
     >
-      Maximo 100 numeros
+      Maximo 100 caracteres
     </div>
   </div>
 </div>
-<div style="background-color: #162f58">
-  <div
-    style="
-      border-radius: 5px;
-      background-color: #162f58;
-      display: flex;
-      justify-content: space-evenly;
-      flex-direction: row;
-    "
-    class="col-md-6 container"
-  >
-    <label style="color: aliceblue"> Historial de Visitas </label>
-  </div>
-</div>
 
-<div class="row">
-  <div class="col-md-4">
-    <label> No. de Reserva </label>
-  </div>
-  <div class="col-md-4">
-    <label> Fechas </label>
-  </div>
-  <div class="col-md-4">
-    <label> Total </label>
-  </div>
-</div>
-<div style="background-color: #162f58">
-  <div
-    style="
-      border-radius: 5px;
-      background-color: #162f58;
-      display: flex;
-      justify-content: space-evenly;
-      flex-direction: row;
-    "
-    class="col-md-6 container"
-  >
-    <label style="color: aliceblue"> Notas Internas del cliente </label>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <label> NOTAS </label>
-  </div>
-</div>
+<div style="background-color: #319dd7" class="modal-content">
 
-<!-- DESDE HISDTORICO
-<div style="background-color:#162F58;" >
-  <div  style=" border-radius: 5px;  background-color:#162F58; display: flex; justify-content:center; flex-direction: row;"
-        class="col-md-12 container">
-
-      <div class="row">
-        <label style="color: white;">Desea generar una nueva reserva a este huesped? <br></label>
-        <button>
-          GENERAR NUEVA RESERVA CON MISMOS DATOS
-        </button>
-        <br>
-
-      </div>
-   </div>
-</div> -->
+  <label
+    class="h4"
+    style="color: aliceblue; text-align: center; padding-top: 5px"
+  > Notas Internas del cliente </label>
+</div>
+<br>
+  <div class="row">
+    <div style="text-align: center;" class="col-md-12">
+      <textarea formControlName="notas" style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
+    </div>
+  </div>
+  <br>
+  
 <div class="row">
   <div
     style="
@@ -538,14 +411,28 @@ class="form form-label-right"
     "
     class="col-md-6"
   >
-    <button class="btn btn-secondary btn-block">Cancelar</button>
+    <button class="btn btn-secondary btn-block"
+    (click)="formReset()">Cancelar</button>
   </div>
   <div class="col-md-6">
-    <button class="btn btn-success btn-block">
+    <button 
+    (click)="save()"
+    class="btn btn-success btn-block">
       Actualizar y Guardar
     </button>
   </div>
 </div>
+<br>
+  <div style="background-color: #319dd7" class="modal-content">
+
+    <label
+      class="h4"
+      style="color: aliceblue; text-align: center; padding-top: 5px"
+    > Historial de Visitas </label>
+  </div>
+  <br>
+
+
 
 <!-- <mat-accordion>
 <mat-expansion-panel>
@@ -567,3 +454,5 @@ class="form form-label-right"
 </mat-expansion-panel>
 </mat-accordion> -->
 </form>
+
+<div *ngIf="isLoading" class="spinner_overlay"><app-loader-spinner></app-loader-spinner></div>
