--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
@@ -29,7 +29,7 @@
         <label class="control-label">Habitacion / Cama:</label>
         <br />
         &nbsp;
-        <label>{{ huesped.habitacion.replace("_"," ") }} - {{huesped.numeroCuarto}}</label>
+        <label>{{ huesped.habitacion.replace("_"," ")  }} - {{huesped.numeroCuarto}}</label>
       </div>
     </div>
 
@@ -64,14 +64,7 @@
         </label>
         <br />
         &nbsp;
-        <select
-          style="border: 2px solid rgb(177, 177, 177)"
-          class="btn btn-white"
-        >
-          <option selected>{{ huesped.origen }}</option>
-          <option>Pagina Web</option>
-          <option>Booking</option>
-        </select>
+       <label>{{ huesped.origen }}</label>
       </div>
     </div>
     <div class="row">
@@ -147,41 +140,120 @@
       Recordatorio de Deposito
     </label>
   </div>
+  <form [formGroup]="formGroupPromesa">
   <div class="row col-md-12">
-    <div class="col-sm-6">
-      <br />
-      <label class="control-label">Cantidad Acordada:</label>
-      <br />
-      <input
-        disabled
-        style="width: 150px"
-        class="form-control"
-        type="text"
-        value="$ 0.00    MXN"
-      />
-    </div>
-
       <div class="col-sm-6">
-        <br>
-        <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
-        <div class="form-group" >
-          <div class="input-group">
-            <input hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker
-            (dateSelect)="fechaSeleccionadaFinal($event)" #f="ngbDatepicker">
-
-            <input class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fechaFinalBloqueo" >
-
-            <div class="input-group-append">
-              <button class="btn btn-primary" (click)="f.toggle()" type="button">
-                <i class="fa fa-calendar icon"></i>
-              </button>
+        <br />
+        <label class="control-label">Cantidad Acordada:</label>
+        <br />
+        <input
+          formControlName="promesaPago"
+          style="width: 150px"
+          class="form-control"
+          type="text"
+          placeholder="$ 0.00    MXN"
+          [class.is-invalid]="isControlInvalid('promesaPago')"
+          [class.is-valid]="isControlValid('promesaPago')"
+        />
+      </div>
+  
+        <div class="col-sm-6">
+          <br>
+          <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
+          <div class="form-group" >
+            <div class="input-group">
+              <input  formControlName="fechaPromesaPago"  hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker
+              (dateSelect)="fechaSeleccionadaFinal($event)" #f="ngbDatepicker">
+  
+              <input         
+              [disabled]="huesped.estatus=='Reserva Cancelada'||huesped.estatus=='No Show'"
+              class="form-control"  placeholder="yyyy-mm-dd" name="dpnotHidden" #ff  [value]="fechaFinalBloqueo" >
+  
+              <div class="input-group-append">
+                <button class="btn btn-primary" (click)="f.toggle()" type="button">
+                  <i class="fa fa-calendar icon"></i>
+                </button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+  </div>
+</form>
+<div class="row">
+  <div
+    style="
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: row;
+    "
+    class="col-md-6"
+  >
+    <button 
+    (click)="guardarPromesa()"
+    class="btn btn-success btn-block">Guardar Promesa</button>
+  </div>
+  <div class="col-md-6">
+    <button 
+    (click)="togglePromesas()"
+    class="btn btn-danger btn-block">
+    Ver Promesas
+    </button>
+  </div>
+</div>
+
+
+<br>
+
+<ng-container *ngIf="promesasDisplay">
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select">
+        <th class="header-align-right" mat-header-cell *matHeaderCellDef>
+          <td class="header-align-right" mat-cell *matCellDef="let row">
+          <button 
+          (click)="eliminarPromesa(row._id)"
+          class="btn btn-danger">
+              x
+          </button>
+        </td>
+      </ng-container>
+
+      <!-- Fecha Column -->
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell hidden *matHeaderCellDef mat-sort-header> _id </th>
+        <td mat-cell hidden *matCellDef="let row"> {{row._id}} </td>
+      </ng-container>
+
+      <!-- Fecha Column -->
+      <ng-container matColumnDef="Fecha">
+        <th mat-header-cell  *matHeaderCellDef mat-sort-header> Fecha </th>
+        <td [ngStyle]="{ 'color': (expired ? 'black' : 'red') }" mat-cell *matCellDef="let row"> {{row.Fecha.split("T")[0]}}{{expired}} </td>
+      </ng-container>
+
+      <!-- Cantidad Column -->
+      <ng-container matColumnDef="Cantidad">
+        <th mat-header-cell  *matHeaderCellDef mat-sort-header> Cantidad </th>
+        <td mat-cell *matCellDef="let row">$ {{row.Cantidad.toLocaleString("es-MX")}}.00 </td>
+      </ng-container>
 
   
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row (click)="clickedRow.add(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No se encontraron datos</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Pagina"></mat-paginator>
   </div>
+</ng-container>
+
+
   <div style="background-color: #319dd7" class="modal-content sub-menu">
     <label
       class="h4"
@@ -191,20 +263,24 @@
     </label>
   </div>
 <br>
+<form [formGroup]="serviciosAdicionaledForm">
 
-  <div class="row">
+
+  <!-- <div class="row">
     <div style="text-align: center; justify-content:space-evenly;" class="col-md-12">
-      <section class="example-section">
+      <section formControlName="adicional" class="example-section">
         <ng-container *ngFor="let adicional of adicionalArray">
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <mat-checkbox (change)="servicioAdicional($event,adicional.Adicional,adicional.Descripcion)"
+          <mat-checkbox 
+          [disabled]="huesped.estatus=='Reserva Cancelada'||huesped.estatus=='No Show'"
+          (change)="servicioAdicional($event,adicional.Adicional,adicional.Descripcion)"
           style="color:#00506a; font-weight: bold;">{{adicional.Descripcion}} </mat-checkbox>
         </ng-container>
       </section>      
       <br>
     </div>
-  </div>
-
+  </div> -->
+<br>
   <div style="background-color: #319dd7" class="modal-content sub-menu">
     <label
       class="h4"
@@ -213,15 +289,37 @@
       NOTAS DEL CLIENTE
     </label>
   </div>
-  <br />
-
+<br>
   <div class="row">
     <div style="text-align: center;" class="col-md-12">
-      <textarea style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
+      <textarea formControlName="notas" style="border: 2px solid rgb(177, 177, 177)" class="form-control">           - NOTAS EXTRAS DEL CLIENTE</textarea>
     </div>
   </div>
-  <br />
 
+  <br />
+  <div class="row">
+    <!-- <div
+      style="
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+      "
+      class="col-md-6"
+    >
+      <button 
+      (click)="formReset()"
+      class="btn btn-secondary btn-block">Cancelar</button>
+    </div> -->
+    <div class="col-md-12">
+      <button 
+      (click)="guardarAdicionales()"
+      class="btn btn-success btn-block">
+        Actualizar y Guardar
+      </button>
+    </div>
+  </div>
+  <br>
+</form>
 
   <div [style]="changeStyleHidden">
     <div
@@ -279,4 +377,6 @@
         </button>
       </div>
     </div>
-  </div>
+  </div>  
+  
+  <div *ngIf="isLoading" class="spinner_overlay"><app-loader-spinner></app-loader-spinner></div>
