--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/edit-reserva-modal.component.html
@@ -21,7 +21,7 @@
       id="example-modal-sizes-title-lg"
     >
       <div class="row">
-        <h2 style="font-size: 1.5em">{{ huesped.nombre }}</h2>
+        <h2 style="font-size: 1.5em">{{ huesped.nombre   }}</h2>
       </div>
       <div class="row">
         <small style="color: white; font-size: 1em"
@@ -57,6 +57,11 @@
       </ng-container>
     </mat-select>
   </ng-container>
+  <ng-container *ngIf="huesped.estatus=='No Show'||huesped.estatus=='Reserva Cancelada'">
+    <mat-select style="width:160px" [(value)]="huesped.estatus" [style.background-color]="backgroundColor(huesped.estatus)" name="filter_for" id="demo" class="btn">
+      <mat-option #option [style.background-color]="backgroundColor(huesped.estatus)" [value]="huesped.estatus">{{huesped.estatus}}</mat-option>
+    </mat-select>
+  </ng-container>
 <br>
 
   <!-- <div style="background-color: #00506a;" class="col-md-12 cursor-default modal-content "> -->
@@ -73,7 +78,7 @@
       </div>
 
       <label style="color: white;font-size: large;">
-        $ {{ (huesped.pendiente).toLocaleString("es-MX") }}.00
+        $ {{ (customerService.getCurrentHuespedValue.pendiente).toLocaleString("es-MX") }}.00
       </label>
     </div>
 
@@ -85,7 +90,7 @@
         <label style="color: white"> Pagado: </label>
       </div>
 
-      <label style="color: white;font-size: large;"> $0.00 </label>
+      <label style="color: white;font-size: large;"> $ {{(customerService.getCurrentHuespedValue.porPagar-customerService.getCurrentHuespedValue.pendiente).toLocaleString("es-MX")}}.00 </label>
     </div>
 
     <div
@@ -97,7 +102,7 @@
       </div>
 
       <label  style="color: white; font-size: large;">
-        $ {{ (huesped.porPagar).toLocaleString("es-MX") }}.00
+        $ {{ (customerService.getCurrentHuespedValue.porPagar).toLocaleString("es-MX") }}.00
       </label>
     </div>
   </div>
@@ -130,7 +135,8 @@
     <div style="justify-content: space-around;" class="row">
 
       <div class="col-lg-6">
-        <button
+        <button 
+          [disabled]="huesped.estatus!='Reserva Sin Pago'"
           class="btn btn-primary btn-block"
           type="submit"
           name="estatus"
@@ -178,7 +184,9 @@
       <br>
 
       <div class="col-lg-6">
-        <button disabled class="btn btn-danger btn-block" type="submit">
+        <button
+        (click)="confirmaReserva(11,huesped.folio);"
+         class="btn btn-danger btn-block" type="submit">
           No se presento
         </button>
         <br>
@@ -187,7 +195,7 @@
 
       <div class="f col-lg-6">
         <button
-          disabled
+        (click)="confirmaReserva(12,huesped.folio);"
           class="btn btn-danger btn-block"
           type="submit"
           value="7"
@@ -203,6 +211,7 @@
           class="btn btn-primary btn-block"
           type="submit"
           value="7"
+          (click)="setStep(1)"
         >
           Modifica Reserva
         </button>
@@ -271,6 +280,22 @@
     </div>
   </div>
 </div>
+<div *ngIf="huesped.estatus=='Reserva Cancelada'">
+  <div style="background-color: #00506a; text-align: center; padding-top: 5px; padding-bottom: 5px;" class="h4 modal-content">
+    <br>
+  <div class="f col-lg-12">
+    <button
+      (click)="confirmaReserva(2,huesped.folio);closeModal()"
+      class="btn btn-success btn-block"
+      type="submit"
+      value="7"
+    >
+      Reactivar Reservación
+    </button>
+    <br>
+  </div>
+  </div>
+</div>
 
 
 <ng-template #error let-modal>
@@ -322,3 +347,6 @@
     <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Cerrar</button>
   </div>
 </ng-template>
+
+<div *ngIf="isLoading" class="spinner_overlay"><app-loader-spinner></app-loader-spinner></div>
+
