--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.scss
@@ -30,6 +30,15 @@ select {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
+#overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.5); 
+  z-index:10000;
+  text-align: center;
+  vertical-align: middle;
+}
 
 //   .ngb-dp-day {
 //   width: 4rem !important;
