--- a/src/app/pages/reportes/helpers/loader-spinner/loader-spinner.component.scss
+++ b/src/app/pages/reportes/helpers/loader-spinner/loader-spinner.component.scss
@@ -1,6 +1,8 @@
 .lds-hourglass {
     display: inline-block;
-    position: relative;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     width: 80px;
     height: 80px;
   }
