--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-column flex-root h-100" id="kt_login_wrapper">
+<div class="d-flex flex-column flex-root h-100" id="kt_login_wrapper" >
   <!--begin::Login-->
-  <div class="login login-1 login-signin-on d-flex flex-column flex-lg-row flex-column-fluid bg-white" id="kt_login">
+  <div class="login login-1 login-signin-on d-flex flex-column flex-lg-row flex-column-fluid " id="kt_login" style="background-color: #f8f8f8;">
     <!--begin::Aside-->
-    <div class="login-aside d-flex flex-column flex-row-auto" style="background-color: #F2C98A;">
+    <div class="login-aside d-flex flex-column flex-row-auto" style="background-color: #ffffff;">
       <!--begin::Aside Top-->
       <div class="d-flex flex-column-auto flex-column pt-lg-40 pt-15">
         <!--begin::Aside header-->
@@ -12,9 +12,9 @@
         <!--end::Aside header-->
 
         <!--begin::Aside title-->
-        <h3 class="font-weight-bolder text-center font-size-h4 font-size-h1-lg" style="color: #986923;">
-          Discover Amazing Metronic<br />
-          with great build tools
+        <h3 class="font-weight-bolder text-center font-size-h4 font-size-h1-lg" style="color: #006ca1;">
+          La Gestión de tu Alojamiento<br />
+          Simple y Eficaz!
         </h3>
         <!--end::Aside title-->
       </div>
@@ -22,7 +22,7 @@
 
       <!--begin::Aside Bottom-->
       <div class="aside-img d-flex flex-row-fluid bgi-no-repeat bgi-position-y-bottom bgi-position-x-center"
-        style="background-image: url('./assets/media/svg/illustrations/login-visual-1.svg')"></div>
+        style="background-image: url('./assets/media/svg/illustrations/login-visual.png')"></div>
       <!--end::Aside Bottom-->
     </div>
     <!--begin::Aside-->
@@ -30,7 +30,7 @@
     
     <!--begin::Content-->
     <div
-      class="login-content flex-row-fluid d-flex flex-column justify-content-center position-relative overflow-hidden p-7 mx-auto">
+      class="login-content flex-row-fluid d-flex flex-column justify-content-center position-relative overflow-hidden p-7 mx-auto" style="background-color: #f8f8f8;">
       <!--begin::Content body-->
       <div class="d-flex flex-column-fluid flex-center">
         <router-outlet></router-outlet>
