--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -13,10 +13,10 @@
     <!--begin::Title-->
     <div class="pb-13 pt-lg-0 pt-5">
       <h3 class="font-weight-bolder text-dark font-size-h4 font-size-h1-lg">
-        Forgotten Password ?
+        Olvidaste la Contraseña ?
       </h3>
       <p class="text-muted font-weight-bold font-size-h4">
-        Enter your email to reset your password
+        Proporciona tu E-mail para restaurar la contraseña
       </p>
     </div>
     <!--end::Title-->
@@ -26,7 +26,7 @@
       <div
         class="mb-10 alert alert-custom alert-light-danger alert-dismissible"
       >
-        <div class="alert-text">The email detail is incorrect</div>
+        <div class="alert-text">El correo es incorrecto</div>
       </div>
     </ng-container>
     <!-- end::Alert error-->
@@ -34,7 +34,7 @@
     <!--begin::Form group-->
     <div class="form-group fv-plugins-icon-container has-danger">
       <input
-        class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6"
+        class="form-control form-control h-auto py-7 px-6 rounded-lg font-size-h6"
         type="email"
         formControlName="email"
         placeholder="Email"
@@ -49,7 +49,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Email is required',
+          message: 'Correo es Obligatorio',
           control: forgotPasswordForm.controls['email']
         }"
       ></ng-container>
@@ -57,7 +57,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'email',
-          message: 'Email is invalid',
+          message: 'El Email no corresponde',
           control: forgotPasswordForm.controls['email']
         }"
       ></ng-container>
@@ -65,7 +65,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minLength',
-          message: 'Email should have at least 3 symbols',
+          message: 'Email debe de tener 3 caracteres como minimo',
           control: forgotPasswordForm.controls['email']
         }"
       ></ng-container>
@@ -73,7 +73,7 @@
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Email should have maximum 360 symbols',
+          message: 'Email debe tener 360 caracteres como maximo',
           control: forgotPasswordForm.controls['email']
         }"
       ></ng-container>
@@ -86,14 +86,14 @@
         id="kt_login_forgot_submit"
         class="btn btn-primary font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-4"
       >
-        Submit
+        Enviar
       </button>
       <a
         routerLink="/auth/login"
         id="kt_login_forgot_cancel"
         class="btn btn-light-primary font-weight-bolder font-size-h6 px-8 py-4 my-3"
       >
-        Cancel
+        Regresar a Login
       </a>
 
       <ng-container *ngIf="isLoading$ | async">
