--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -153,3 +153,4 @@
     </div>
   </ng-container>
 </ng-template>
+<div *ngIf="isLoading" class="spinner_overlay"><loading-spinner></loading-spinner></div>
