--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -154,3 +154,5 @@
   </ng-container>
 </ng-template>
 <div *ngIf="isLoading" class="spinner_overlay"><loading-spinner></loading-spinner></div>
+<div><img alt="My image name" src="../../../../assets/media/Dual Ball-1s-101px.html (1)/spinner.html">
+</div>
