--- a/src/app/pages/reportes/helpers/loader-spinner/loader-spinner.component.html
+++ b/src/app/pages/reportes/helpers/loader-spinner/loader-spinner.component.html
@@ -1,1 +1,5 @@
-<p>loader-spinner works!</p>
+<div class="spinner_overlay">
+    <div  class="loadingio-spinner-dual-ball-nmsq3iyutj"><div class="ldio-7vh86a8iees">
+        <div></div><div></div><div></div>
+        </div></div>
+</div>
