--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
@@ -162,8 +162,17 @@
           <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Fecha Final</label>
           <div class="form-group" >
             <div class="input-group">
-              <input  formControlName="fechaPromesaPago"  hidden class="form-control"  placeholder="yyyy-mm-dd" name="dp"  ngbDatepicker
-              (dateSelect)="fechaSeleccionadaFinal($event)" #f="ngbDatepicker">
+              <input  
+              formControlName="fechaPromesaPago"  
+              hidden 
+              class="form-control"  
+              placeholder="yyyy-mm-dd" 
+              name="dp"  
+              [startDate]="fromDate!"
+              ngbDatepicker
+              (dateSelect)="fechaSeleccionadaFinal($event)" 
+              [minDate]=today
+              #f="ngbDatepicker">
   
               <input         
               [disabled]="huesped.estatus=='Reserva Cancelada'||huesped.estatus=='No Show'"
@@ -230,13 +239,19 @@
       <!-- Fecha Column -->
       <ng-container matColumnDef="Fecha">
         <th mat-header-cell  *matHeaderCellDef mat-sort-header> Fecha </th>
-        <td [ngStyle]="{ 'color': (expired ? 'black' : 'red') }" mat-cell *matCellDef="let row"> {{row.Fecha.split("T")[0]}}{{expired}} </td>
+        <td  mat-cell *matCellDef="let row"> {{row.Fecha}} </td>
       </ng-container>
 
       <!-- Cantidad Column -->
       <ng-container matColumnDef="Cantidad">
         <th mat-header-cell  *matHeaderCellDef mat-sort-header> Cantidad </th>
         <td mat-cell *matCellDef="let row">$ {{row.Cantidad.toLocaleString("es-MX")}}.00 </td>
+      </ng-container>
+
+            <!-- Expirado Column -->
+      <ng-container hidden matColumnDef="Expirado">
+        <th mat-header-cell  *matHeaderCellDef mat-sort-header> Expirado </th>
+        <td style="color: white; font-weight: bold;" [ngStyle]="{'background-color': row.Expirado ? '#f7347a' : '#00c688' }" mat-cell *matCellDef="let row"> {{row.Expirado ? 'Expirado' : 'Vigente' }} </td>
       </ng-container>
 
   
@@ -262,6 +277,7 @@
       SERVICIOS ADICIONALES
     </label>
   </div>
+
 <br>
 <form [formGroup]="serviciosAdicionaledForm">
 
@@ -379,4 +395,8 @@
     </div>
   </div>  
   
-  <div *ngIf="isLoading" class="spinner_overlay"><app-loader-spinner></app-loader-spinner></div>
+
+
+  <ng-container *ngIf="isLoading">
+    <app-loader-spinner></app-loader-spinner>
+  </ng-container>
