Updated Spinner for loggin

--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -153,7 +153,7 @@
       >
         Ingresar
       </button>
-      <button
+      <!-- <button
         type="button"
         [disabled]="isLoading"
         class="btn btn-light-primary font-weight-bolder px-8 py-4 my-3 font-size-lg"
@@ -162,7 +162,7 @@
           <img src="./assets/media/svg/social-icons/google.svg" />
         </span>
         Ingresar con Google
-      </button> -->
+      </button> --> 
 
     </div>
     <!--end::Action-->
