--- a/src/app/modules/auth/login/loader-spinner/loading-spinner.component.css
+++ b/src/app/modules/auth/login/loader-spinner/loading-spinner.component.css
@@ -1,36 +1,57 @@
-.lds-hourglass {
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 80px;
-  height: 80px;
+@keyframes ldio-7vh86a8iees-o {
+  0%    { opacity: 1; transform: translate(0 0) }
+ 49.99% { opacity: 1; transform: translate(40.4px,0) }
+ 50%    { opacity: 0; transform: translate(40.4px,0) }
+100%    { opacity: 0; transform: translate(0,0) }
 }
-.lds-hourglass:after {
-  content: " ";
-  display: block;
-  border-radius: 50%;
-  width: 0;
-  height: 0;
-  margin: 8px;
-  box-sizing: border-box;
-  border: 32px solid rgb(80, 79, 79);
-  border-color: rgb(80, 79, 79) transparent rgb(80, 79, 79) transparent;
-  animation: lds-hourglass 1.2s infinite;
+@keyframes ldio-7vh86a8iees {
+  0% { transform: translate(0,0) }
+ 50% { transform: translate(40.4px,0) }
+100% { transform: translate(0,0) }
 }
-@keyframes lds-hourglass {
-  0% {
-    transform: rotate(0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  }
-  50% {
-    transform: rotate(900deg);
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  100% {
-    transform: rotate(1800deg);
-  }
+.ldio-7vh86a8iees div {
+position: absolute;
+width: 40.4px;
+height: 40.4px;
+border-radius: 50%;
+top: 0;
+left: 0;
 }
+.ldio-7vh86a8iees div:nth-child(1) {
+background: #1d3f72;
+animation: ldio-7vh86a8iees 1s linear infinite;
+animation-delay: -0.5s;
+}
+.ldio-7vh86a8iees div:nth-child(2) {
+background: #5699d2;
+animation: ldio-7vh86a8iees 1s linear infinite;
+animation-delay: 0s;
+}
+.ldio-7vh86a8iees div:nth-child(3) {
+background: #1d3f72;
+animation: ldio-7vh86a8iees-o 1s linear infinite;
+animation-delay: -0.5s;
+}
+.loadingio-spinner-dual-ball-nmsq3iyutj {
+width: 101px;
+height: 101px;
+top: 50%;
+left: 50%;
+position: relative;
+display: inline-block;
+overflow: hidden;
+background: none;
+}
+.ldio-7vh86a8iees {
+width: 100%;
+height: 100%;
+position: relative;
+transform: translateZ(0) scale(1);
+backface-visibility: hidden;
+transform-origin: 0 0; /* see note above */
+}
+.ldio-7vh86a8iees div { box-sizing: content-box; }
+
 .spinner_overlay {
   position: fixed;
   left: 0;
