--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/reserva/reservas-component/reservas-component.component.html
@@ -248,20 +248,27 @@
         <td mat-cell *matCellDef="let row">$ {{row.Cantidad.toLocaleString("es-MX")}}.00 </td>
       </ng-container>
 
-            <!-- Expirado Column -->
+      <!-- Expirado Column -->
       <ng-container hidden matColumnDef="Expirado">
         <th mat-header-cell  *matHeaderCellDef mat-sort-header> Expirado </th>
         <td style="color: white; font-weight: bold;" [ngStyle]="{'background-color': row.Expirado ? '#f7347a' : '#00c688' }" mat-cell *matCellDef="let row"> {{row.Expirado ? 'Expirado' : 'Vigente' }} </td>
       </ng-container>
 
+                  <!-- Aplicar PAgo Column -->
+      <ng-container hidden matColumnDef="Aplicar">
+        <th mat-header-cell  *matHeaderCellDef mat-sort-header> Aplicar </th>
+        <td mat-cell  *matCellDef="let row"> <button [disabled]="row.Aplicado" (click)="preguntasPrevias(row)" [ngStyle]="{'background-color': row.Aplicado ? '#B1C292' : '#ffd867' }" class="btn btn-info"><i class="fa fa-check" aria-hidden="true"></i></button> </td>
+      </ng-container>
+
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row (click)="clickedRow.add(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row (click)="clickedRow.add(row);" *matRowDef="let row; columns: displayedColumns;"></tr>
   
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No se encontraron datos</td>
       </tr>
+
     </table>
   
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Pagina"></mat-paginator>
@@ -400,3 +407,36 @@
   <ng-container *ngIf="isLoading">
     <app-loader-spinner></app-loader-spinner>
   </ng-container>
+
+  <ng-template #pregunta let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title">Que desea Hacer?</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <!-- <div class="modal-body">
+      <p>Ocurrio un Error al guardar al Húesped porfavor intentelo mas tarde&hellip;</p>
+    </div> -->
+    <div class="modal-footer">
+      <div class="row">
+        <button type="button" class="btn btn-success col-md-12" (click)="modal.close(1);next.emit();">Agregar el Pago a esta Cuenta</button>
+        <br>
+        <ng-container *ngIf="pagoManual">
+          <br>
+          <form [formGroup]="thirdForm">
+            <input 
+            class="form-field col-md-6"
+            formControlName='pagoManualInput'
+            > 
+            <button class="btn-success col-md-6" (click)="modal.close(2);next.emit();">Aceptar</button>
+            <br>
+          </form>
+        </ng-container>
+        <button type="button" class="btn btn-secondary col-md-12" (click)="muestraInput()">Agregar Manual</button>
+        <br>
+        <button type="button" class="btn btn-warning col-md-12" (click)="modal.close(3)">Cerrar</button>
+      </div>
+     
+    </div>
+  </ng-template>
