--- a/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
+++ b/src/app/pages/reportes/customers/components/edit-reserva-modal/components/transacciones/transacciones-component/transacciones-component.component.html
@@ -193,35 +193,78 @@
   </label>
 </div>
 <div class="row col-md-12" style="justify-content: center;">
-<table class="table overflow-hidden table-head-custom table-vertical-center">
-  <thead>
-    <th></th>
-    <th>Fecha</th>
-    <th>Concepto</th>
-    <th>F.P.</th>
-    <th>Valor</th>
-  </thead>
-  <tbody>
-    <tr *ngFor="let edo_cuenta of estadoDeCuenta let index">
-      <td> <button [disabled]="huesped.estatus=='Check-Out'" (click)="deleteRow(edo_cuenta)" class="btn btn-danger">X</button></td>
-      <td> {{edo_cuenta.Fecha.split('T')[0]}}</td>
-      <td> {{edo_cuenta.Descripcion}}</td>
-      <td> {{edo_cuenta.Forma_de_Pago}}</td>
-      <ng-container *ngIf="edo_cuenta.Cargo==0">
-        <td>$-{{edo_cuenta.Abono.toLocaleString("es-MX")}}.00</td>
+
+
+<table mat-table [dataSource]="dataSource" matSort class="table overflow-hidden table-head-custom table-vertical-center">
+  
+   <!-- Blank Column -->
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="select">
+        <th class="header-align-right" mat-header-cell *matHeaderCellDef>
+          <td class="header-align-right" mat-cell *matCellDef="let row">
+          <button 
+          (click)="deleteRow(row)"
+          class="btn btn-danger">
+              x
+          </button>
+        </td>
+        <td mat-footer-cell *matFooterCellDef>  </td>
+
       </ng-container>
-      <ng-container *ngIf="edo_cuenta.Abono==0">
-        <td>${{edo_cuenta.Cargo.toLocaleString("es-MX")}}.00</td>
-      </ng-container>
-    </tr>
-  </tbody>
-  <footer style="position: absolute; right: 10%;">
+
+  <!-- Fecha Column -->
+  <ng-container matColumnDef="Fecha">
+    <th   mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
+    <td  mat-cell *matCellDef="let row"> {{row.Fecha.split('T')[0]}} </td>
+    <td mat-footer-cell *matFooterCellDef>  </td>
+
+  </ng-container>
+
+  <!-- Concepto Column -->
+  <ng-container matColumnDef="Concepto">
+    <th  mat-header-cell  *matHeaderCellDef mat-sort-header> Concepto </th>
+    <td  mat-cell *matCellDef="let row">{{row.Descripcion}}  </td>
+    <td mat-footer-cell *matFooterCellDef>  </td>
+
+  </ng-container>
+
+  <!-- F.P. Column -->
+  <ng-container hidden matColumnDef="F.P.">
+    <th  mat-header-cell  *matHeaderCellDef mat-sort-header> F.P. </th>
+    <td  mat-cell *matCellDef="let row">  {{row.Forma_de_Pago}}</td>
+    <td mat-footer-cell *matFooterCellDef> Total </td>
+  </ng-container>
+
+  
+  <!-- Valor PAgo Column -->
+  <ng-container hidden matColumnDef="Valor">
+    <th  mat-header-cell  *matHeaderCellDef mat-sort-header> Valor </th>
+    <td  mat-cell *matCellDef="let row">
+      <ng-container *ngIf="row.Abono==0">
+       $ {{row.Cargo.toLocaleString("es-MX")}}.00
+      </ng-container>  
+      <ng-container *ngIf="row.Cargo==0">
+       $ {{row.Abono.toLocaleString("es-MX")}}.00
+      </ng-container> 
+    </td>
+    <td mat-footer-cell *matFooterCellDef> ${{totalCalculado.toLocaleString("es-MX")}}.00  </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+  <!-- <tr mat-footer-row *matFooterRowDef="displayedColumns">
     <hr>
-Total :  ${{totalCalculado.toLocaleString("es-MX")}}.00
-  </footer>
+    Total :  ${{totalCalculado.toLocaleString("es-MX")}}.00
+  </tr> -->
+
+    
+  
 </table>
-<app-paginator class="flex-wrap d-flex justify-content-between align-items-center" [paginator]="paginator"
-[isLoading]="isLoading" (paginate)="paginate($event)"></app-paginator>
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Pagina"></mat-paginator>
+
+
 </div>
 
 
@@ -233,21 +276,6 @@ Total :  ${{totalCalculado.toLocaleString("es-MX")}}.00
 
 
 
-
-<ng-template #modal let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title">{{modalHeader}}</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <p>{{mensaje}}</p>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Cerrar</button>
-    </div>
-  </ng-template>
 
   <ng-container *ngIf="isLoading">
     <app-loader-spinner></app-loader-spinner>
